# debug-mpi-in-vscode

./: CMakeLists.txt  hello-mpi.cpp  readme.md
